# models/network_block_number.go
@@ -10,22 +10,22 @@ import (
 	"github.com/go-openapi/swag"
 )
 
-// NetworkBlocNumber BlockNumber
+// NetworkBlockNumber BlockNumber
 //
-// swagger:model NetworkBlocNumber
-type NetworkBlocNumber struct {
+// swagger:model NetworkBlockNumber
+type NetworkBlockNumber struct {
 
 	// <b>BlockNumber</b>
 	BlockNumber int64 `json:"blockNumber,omitempty"`
 }
 
-// Validate validates this network bloc number
-func (m *NetworkBlocNumber) Validate(formats strfmt.Registry) error {
+// Validate validates this network block number
+func (m *NetworkBlockNumber) Validate(formats strfmt.Registry) error {
 	return nil
 }
 
 // MarshalBinary interface implementation
-func (m *NetworkBlocNumber) MarshalBinary() ([]byte, error) {
+func (m *NetworkBlockNumber) MarshalBinary() ([]byte, error) {
 	if m == nil {
 		return nil, nil
 	}
@@ -33,8 +33,8 @@ func (m *NetworkBlocNumber) MarshalBinary() ([]byte, error) {
 }
 
 // UnmarshalBinary interface implementation
-func (m *NetworkBlocNumber) UnmarshalBinary(b []byte) error {
-	var res NetworkBlocNumber
+func (m *NetworkBlockNumber) UnmarshalBinary(b []byte) error {
+	var res NetworkBlockNumber
 	if err := swag.ReadJSON(b, &res); err != nil {
 		return err
 	}
